[project]
authors = []
description = ""
name = "api"
requires-python = ">=3.7"
version = "0.1.0"
dependencies = [
    "attrs>=24.2.0",
    "fastapi[standard]>=0.103.2",
    "httpx>=0.24.1",
    "strawberry-graphql>=0.196.2",
]

[tool.black]
line-length = 88

[tool.isort]
combine_as_imports = true
combine_star = true
indent = 4
known_pytest = ["pytest"]
known_strawberry = ["strawberry"]
lines_after_imports = 2
profile = "black"
sections = ["FUTURE", "STDLIB", "PYTEST", "THIRDPARTY", "STRAWBERRY", "FIRSTPARTY", "LOCALFOLDER"]

[tool.mypy]
plugins = ["strawberry.ext.mypy_plugin"]
